fixed image wasnt working. Reverted back to horizontal align. Added new background. Added color palette from coolors.com. Went for a darker theme

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,11 +20,10 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
   font-size: 24px;
-  font-family: "Source Sans Pro", sans-serif;
-  background-image: url(../images/asfalt-dark.png);
-  background-color: lightskyblue;
+  font-family: "Source Sans Pro";
+  background-image: url(../images/dark-geometric.png);
+  background-color: #F5E6E8;
   color: #FFFFFF;
 }
 
@@ -61,12 +60,22 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  position: fixed;
+  color: #F5E6E8;
 }
 
  b {/*write*/
   font-weight: bolder;
  }
+
+h2 {
+  margin-bottom: 10px;
+  font-weight: bolder;
+  font-size: larger;
+}
+
+p {
+  margin-bottom: 15px;
+}
 
 
 /*
@@ -80,8 +89,8 @@ header {
 
  .container {
   display: flex;
-  margin: 10%;
-  margin-top: 400px;
+  margin-top: 3em;
+  margin-right: 10%;
 }
 
 .new-tweet {
@@ -94,8 +103,9 @@ header {
  main {
   width: 90%;
   display: flex;
-  justify-content: center;
+ 
   flex-direction: column;
+  color: #F5E6E8;
 }
 
 #tweet-text {
@@ -104,11 +114,13 @@ header {
   box-sizing: border-box;
   border: none;
   border-bottom: 2px solid black;
+  margin-bottom: 10px;
 }
 
 .tweet-and-rmtxt {  /*submit and remaining count*/
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .submit-button {
