--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,7 +13,6 @@
  }
 
  .fa-angle-double-down {
-  color: lightsteelblue;
+  color: #967AA1;
  }
 
- 
